--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "course-project",
   "version": "1.0.0",
   "description": "Statistical Portal project for LUT University web programming course.",
-  "main": "index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,10 @@
   "homepage": "https://github.com/NikodemiusTKT/lut-stat-portal-webprog2024#readme",
   "devDependencies": {
     "parcel": "^2.12.0"
+  },
+  "dependencies": {
+    "frappe": "^0.0.1",
+    "frappe-charts": "^1.6.2",
+    "leaflet": "^1.9.4"
   }
 }
